<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Enter</string>
    <string name="reseting_str">重置中……</string>
    <string name="la_login_loading_str">登录中……</string>

    <string name="aa_register_str">注册</string>
    <string name="al_username_str">请输入手机号</string>
    <string name="al_password_str">请输入密码</string>
    <string name="al_login_str">立即登录</string>
    <string name="al_register_str">注册新用户</string>
    <string name="al_forget_str">忘记密码?</string>
    <string name="al_wx_login_strs">微信登录</string>
    <string name="al_wx_login_strss">使用其他方式登录</string>
    <string name="un_null_str">请输入您的账号</string>
    <string name="phone_null_str">请输入您的手机号</string>
    <string name="pw_null_str">请输入您的密码</string>
    <string name="company_name">北京盈泰财富云电子商务有限公司</string>
    <string name="web_address">www.caifuyun.cn</string>
    <string name="la_wxlogin_str">微信登录</string>

    <string name="la_no_install_wx_str">未安装微信</string>
    <string name="author_error_str">授权失败</string>
    <string name="author_cancel_str">授权取消</string>
    <string name="la_getinfo_error_str">获取用户信息失败</string>
    <string name="la_login_succ_str">登录成功</string>

    <string name="la_cd_content_str">您将使用微信号%1$s创建私享云账号</string>
    <string name="sending_str">发送中……</string>
    <string name="sending_succ_str">发送成功</string>
    <string name="sending_fail_str">发送失败</string>
    <string name="ra_code_resend_str">重新发送</string>
    <string name="checking_str">验证中……</string>
    <string name="checking_fail_str">验证失败</string>
    <string name="account_merge_str">您的手机号%1$s在此之前已经注册过私享云App的帐号，为保障您的信息安全和提供一致的在线服务，私享云需要您将手机帐号与微信帐号进行合并操作，届时您将可以通过微信号或手机号登录使用App。选择“我要合并”，客服人员将会在48小时内与您电话确认合并需求并告知您合并之后的相关使用事项，在此期间您可以正常使用App（不会受影响）。如果您不需要合并帐号，请选择“继续使用”。如有疑问，请拨打400-188-8848咨询</string>
    <string name="bpna_marge_str">账号合并</string>
    <string name="bpna_marge_no_str">继续使用</string>
    <string name="bing_phone_succ_str">绑定成功</string>
    <string name="bing_phone_fail_str">绑定失败</string>

    <string name="bind_phone_str">绑定中……</string>

    <string name="bpna_marge_yes_str">我要合并</string>
    <string name="bpna_start_marge_str">开始合并账号</string>

    <string name="bind_phone_not_repeat_str">您的手机号正在绑定中，不用重复绑定</string>
    <string name="cia_choice_ids_str">请选择您的身份</string>

    <string name="send_code_str">发送验证码</string>
    <string name="ab_jump_next_str"><![CDATA[跳过>]]></string>
    <string name="ra_register_success_str">注册成功</string>
    <string name="ra_register_fail_str">注册失败</string>

    <string name="modify_password_success_str">修改密码成功</string>
    <string name="modify_password_failure_str">注册密码失败</string>

    <string name="ra_register_loading_str">注册中……</string>

    <string name="al_need_bind_phone_str">您需要绑定手机号</string>

    <string name="aa_restart_now_str">立即启动</string>
    <string name="btn_cancel_str">取消</string>
    <string name="aa_login_str">登录</string>
    <string name="vbnb_msg_str">消息</string>
    <string name="ra_send_code_str">您将会接收到来自%1$s的电话，验证码将会以语音的方式播放，如有疑问，拨打客服电话：400-188-8848。</string>

    <string name="permission_help">帮助</string>
    <string name="permission_help_text">私享云缺少必要权限：\n\n%s\n请点击"设置"-"权限"-打开所需权限。</string>
    <string name="permission_quit">退出</string>
    <string name="permission_setting">设置</string>
    <string name="permission_audio_str">音频录制权限\n</string>
    <string name="permission_sdcard_str">访问sdcard权限\n</string>
    <string name="permission_camera_str">相机权限\n</string>
    <string name="permission_sms_str">发送短信权限\n</string>
    <string name="permission_contancts_str">读取联系人权限\n</string>
    <string name="permission_phone_str">拨打电话管理权限\n</string>
    <string name="permission_location_str">访问范围性的定位权限\n</string>
    <string name="permission_extenge_str">照片、媒体内容和文件权限\n</string>
    <string name="wel_cancelbtn_str">跳过</string>
    <string name="aci_choice_ids_str">选择您的身份</string>
    <string name="aci_right_inverstor_str">我是合格投资人</string>
    <string name="aci_right_adviser_str">我是投资顾问</string>

    <string name="aci_next_str">下一步</string>

    <string name="enter_phone_hint_str">请输入手机号</string>

    <string name="enter_code_hint_str">请输入验证码</string>

    <string name="code_null_str">请输入您的验证码</string>

    <string name="ra_enter_code_str">确认接收</string>

    <string name="pwd_noright_str">请输入6-16位密码</string>
    <string name="proto_notread_str">请阅读私享云使用协议并确认</string>

    <string name="as_nosame_str">请输入相同的密码</string>
    <string name="modify_password_failure">修改失败</string>
    <string name="pw_lenth_str">请输入6-16位密码</string>
    <string name="rsa_encryput_error">RSA加密失败请退出程序重新进入登录界面</string>

    <string name="bind_account_prompt">参照《移动互联网应用程序信息服务管理规定》，请您按提示要求填写您的手机号码和验证码完成校验，感谢您的配合！</string>
    <string name="phone_noright_str">请输入正确的手机号</string>
    <string name="code_shixiao">验证码一分钟内有效,请尽快输入</string>

    <!-- 私享云新增****************** -->
    <!-- 私享云新增****************** -->
    <string name="phone_regist">手机注册</string>
    <string name="code_shixiao1">请在2分钟内完成验证</string>
    <string name="newc_login_now">立即登录</string>
</resources>
