<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mvp.ui.ChoiceIdentityActivity">

    <com.cgbsoft.lib.widget.ScrollingImageView
        android:id="@+id/siv_aci_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        scrolling_image_view:speed="1dp"
        scrolling_image_view:src="@drawable/bg_choice_ids" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="68dp"
            android:background="@drawable/bg_choice_ids_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@color/white_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aci_choice_ids_str"
                android:textColor="@color/white_dark"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@color/white_dark" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_aci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_aci_inverstor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:clickable="false"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/select_aci_inverstor"
                android:gravity="center"
                android:shadowColor="#ff000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/aci_right_inverstor_str"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_aci_adviser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:clickable="false"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/select_aci_adviser"
                android:gravity="center"
                android:shadowColor="#ff000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/aci_right_adviser_str"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_aci_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/select_btn_white"
            android:gravity="center"
            android:text="@string/aci_next_str"
            android:textColor="#666"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:shadowColor="#ff000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_webaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:shadowColor="#ff000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/web_address"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>