<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mvp.ui.BindPhoneActivity">

    <com.cgbsoft.lib.widget.ScrollingImageView
        android:id="@+id/siv_ab_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        scrolling_image_view:speed="1dp"
        scrolling_image_view:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_10_dip">

            <ImageView
                android:id="@+id/iv_ab_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:padding="@dimen/ui_15_dip"
                android:src="@drawable/ic_toolbar_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="@string/bind_phone"

                android:textColor="@color/black"
                android:textSize="@dimen/dimens_sp_18" />

            <TextView
                android:id="@+id/tv_ab_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/ab_jump_next_str"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_sp_16" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/ui_80_dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_ab_check"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_ab_username"
                        style="@style/normal_edit1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"

                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_phone_hint_str"
                        android:inputType="number"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:saveEnabled="false"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/iv_phone_del_un"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/et_ab_username"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="@dimen/ui_5_dip"
                        android:src="@drawable/ic_et_del"
                         android:visibility="invisible"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ui_1_dip"
                    android:src="@color/app_split_line" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_ab_check"
                style="@style/btn_red_line_bg_style"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="0dp"
                android:text="@string/send_code_str"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/ui_10_dip">

            <EditText
                android:id="@+id/et_ab_check"
                style="@style/normal_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/enter_code_hint_str"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:saveEnabled="false"
                android:scrollHorizontally="true"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_ab_del_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/et_ab_check"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/ic_et_del"
                android:visibility="invisible" />
        </RelativeLayout>

        <View style="@style/normal_line3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:maxLines="5"
            android:text="@string/bind_account_prompt"
            android:textColor="@color/tv_gray"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_ab_ok"
            style="@style/normal_alphbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/enter_str" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>