<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.cgbsoft.lib.widget.ScrollingImageView
        android:id="@+id/siv_al_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        scrolling_image_view:speed="1dp"
        scrolling_image_view:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/web_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_address"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_al_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/ui_40_dip"
                android:layout_marginTop="68dp"
                android:background="@drawable/login_logo" />

            <ImageView
                android:id="@+id/login_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/ui_20_dip"
                android:src="@drawable/login_right_cha"
                android:visibility="gone" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/home_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"

                app:hintTextAppearance="@style/textinput_style">

                <EditText
                    android:id="@+id/et_al_username"
                    style="@style/normal_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"

                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="请输入手机号"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/hintcolor" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_al_del_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@id/home_name_input"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_et_del"
                android:focusable="true"
                android:visibility="invisible" />

        </RelativeLayout>


        <ImageView style="@style/enter_ed_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/home_name_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/textinput_style">

                <EditText
                    android:id="@+id/et_al_password"
                    style="@style/normal_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/al_password_str"
                    android:inputType="textPassword"

                    android:maxLines="1"
                    android:saveEnabled="false"
                    android:scrollHorizontally="true"

                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_al_del_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/home_name_password"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_et_del"
                android:visibility="invisible" />
        </RelativeLayout>

        <ImageView style="@style/enter_ed_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_al_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_register_str"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_al_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/al_forget_str"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_al_login"
            style="@style/normal_alphbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/al_login_str"
            android:textColor="@color/black50"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_stroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ui_10_dip"
            android:background="@color/transparent"
            android:gravity="center"
            android:paddingBottom="@dimen/ui_10_dip"
            android:paddingLeft="@dimen/ui_30_dip"
            android:paddingRight="@dimen/ui_30_dip"
            android:paddingTop="@dimen/ui_10_dip"
            android:text="先逛逛"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/enter_login_wxlogin_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/login_weixins_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/al_wx_login_strss"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2px"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="@dimen/ui_30_dip"
                    android:layout_toLeftOf="@id/login_weixins_text"
                    android:background="@color/black40" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2px"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/ui_30_dip"
                    android:layout_marginRight="40dp"
                    android:layout_toRightOf="@id/login_weixins_text"
                    android:background="@color/black40" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/enter_login_wx_bt_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/ui_10_dip"
                android:background="@drawable/select_comment_share_bt"
                android:clickable="true"
                android:padding="@dimen/ui_10_dip"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/enter_login_wx_bt"
                    android:layout_width="@dimen/ui_50_dip"
                    android:layout_height="@dimen/ui_50_dip"
                    android:src="@drawable/login_wx" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>